--- a/server/deno.json
+++ b/server/deno.json
@@ -4,6 +4,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "express": "npm:express@^4.21.2"
+    "express": "npm:express@^4.21.2",
+    "redis": "npm:redis@^4.7.0"
   }
 }
